--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -1,4 +1,4 @@
-FROM wsmdr1986/php:7.1.3-fpm-alpine
+FROM php:7.2-fpm-alpine
 
 COPY ./ext/xdebug.ini /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
 
@@ -6,11 +6,11 @@ RUN composer config -g repo.packagist composer https://packagist.phpcomposer.com
 
 RUN mkdir /app
 
-RUN addgroup -g 1000 -S wsmdr \
-	&& adduser -u 1000 -D -S -G wsmdr wsmdr
+RUN addgroup -g 1000 -S ${APPLICATION_USER_NAME} \
+	&& adduser -u 1000 -D -S -G ${APPLICATION_USER_NAME} ${APPLICATION_USER_NAME}
 
-RUN chown wsmdr:wsmdr /app
+RUN chown ${APPLICATION_USER_NAME}:${APPLICATION_USER_NAME} /app
 
-USER wsmdr
+USER ${APPLICATION_USER_NAME}
 
 WORKDIR /app
